Fixed regression: Timeout time for FFMPEG was too low, failed to render fully on certain systems and configurations.

BUG:436524